tests/bad/func_not_found.ae
/// fail: Unknown Identifier

def main() {
  foo()
}